--- a/src/paginas/login/Login.css
+++ b/src/paginas/login/Login.css
@@ -9,3 +9,9 @@
 .text-decoration-none {
   text-decoration: none;
 }
+
+.input-login {
+  outline: 2px solid blue;
+  background-color: aquamarine;
+  color: red
+}
