--- a/src/components/perfil/Perfil.css
+++ b/src/components/perfil/Perfil.css
@@ -20,3 +20,17 @@
   display: block;
   border: 3px solid #303F9F
 }
+
+.postUser {
+  display: flex;
+  gap: 1rem;
+  padding-left: 1rem;
+  margin-top: 1rem;
+}
+
+.postPerfil {
+  -webkit-box-shadow: 3px 3px 15px 1px rgba(0,0,0,0.4); 
+  box-shadow: 3px 3px 15px 1px rgba(0,0,0,0.4);
+  border-radius: 8px;
+  padding: 0 1rem 1.5rem;
+}
